# esp-idf

components/bootloader_support/: CMakeLists.txt  linker.lf
components/bootloader_support/bootloader_flash/src/: bootloader_flash_config_esp32c5.c  bootloader_flash_config_esp32c61.c
components/esp_driver_gpio/: linker.lf
components/esp_driver_spi/: CMakeLists.txt
components/esp_driver_spi/include/driver/: spi_master.h
components/esp_driver_spi/include/esp_private/: spi_common_internal.h
components/esp_driver_spi/src/gpspi/: spi_common.c  spi_master.c
components/esp_hw_support/: esp_gpio_reserve.c  linker.lf
components/esp_hw_support/port/esp32c5/: pmu_init.c
components/esp_hw_support/port/esp32c61/: pmu_init.c
components/esp_psram/: CMakeLists.txt  linker.lf  mmu_psram_flash_v2.c
components/esp_psram/esp32c5/: Kconfig.spiram
components/esp_psram/esp32c61/: Kconfig.spiram
components/esp_system/: CMakeLists.txt  linker.lf  startup.c
components/esp_system/ld/esp32c5/: sections.ld.in
components/esp_system/ld/esp32c61/: sections.ld.in
components/esp_system/port/: cpu_start.c
components/esp_system/port/soc/esp32c5/: clk.c
components/esp_system/port/soc/esp32c61/: clk.c
components/esptool_py/: project_include.cmake
components/hal/: linker.lf
components/hal/esp32c61/include/hal/: spimem_flash_ll.h
components/heap/: heap_caps_init.c  linker.lf
components/riscv/: linker.lf
components/spi_flash/: linker.lf
components/xz/: CMakeLists.txt  linker.lf
components/xz/port/: esp_xz_custom_malloc.c
components/xz/port/include/: esp_xz_custom_malloc.h  xz_config.h
examples/get-started/hello_world/: sdkconfig.defaults  sdkconfig.defaults.esp32c5
examples/protocols/https_request/: sdkconfig.defaults.esp32c61
examples/protocols/https_request/main/: CMakeLists.txt  https_request_example_main.c
examples/provisioning/wifi_prov_mgr/: sdkconfig.defaults  sdkconfig.defaults.esp32c61  sdkconfig.spiram_instructions  sdkconfig.spiram_rodata
examples/provisioning/wifi_prov_mgr/main/: CMakeLists.txt  app_main.c
examples/storage/nvs/nvs_bootloader/: CMakeLists.txt  nvs_data.csv  sdkconfig.blog  secure_boot_signing_key.pem
examples/storage/nvs/nvs_bootloader/bootloader_components/driver_hal/: CMakeLists.txt  gpio_hal.c  spi_hal.c  spi_hal_iram.c
examples/storage/nvs/nvs_bootloader/bootloader_components/driver_hal/include/: new_spi_ll.h
examples/storage/nvs/nvs_bootloader/bootloader_components/led_strip/: CMakeLists.txt
examples/storage/nvs/nvs_bootloader/bootloader_components/led_strip/include/: led_strip.h
examples/storage/nvs/nvs_bootloader/bootloader_components/led_strip/src/: led_strip_spi_dev.c
examples/storage/nvs/nvs_bootloader/bootloader_components/nvs_bootloader_example/: CMakeLists.txt
examples/storage/nvs/nvs_bootloader/bootloader_components/nvs_bootloader_example/src/: nvs_bootloader_example.c
examples/storage/nvs/nvs_bootloader/bootloader_components/spi_driver/: CMakeLists.txt
examples/storage/nvs/nvs_bootloader/bootloader_components/spi_driver/include/driver/: spi_common.h  spi_master.h
examples/storage/nvs/nvs_bootloader/bootloader_components/spi_driver/src/gpspi/: spi_common.c  spi_master.c
examples/storage/nvs/nvs_bootloader/led_strip/: CMakeLists.txt
examples/storage/nvs/nvs_bootloader/led_strip/src/: led_strip_spi_dev.c
examples/storage/nvs/nvs_bootloader/main/: CMakeLists.txt  app_utilities.c  bootloader_hooks_example_main.c  idf_component.yml
examples/storage/nvs/nvs_bootloader/spi_driver/: CMakeLists.txt
examples/storage/nvs/nvs_bootloader/spi_driver/include/esp_private/: spi_common_internal.h
examples/storage/nvs/nvs_bootloader/spi_driver/src/gpspi/: spi_common.c  spi_master.c
tools/legacy_exports/: export_legacy.sh
tools/requirements/: requirements.core.txt
